fix bug repairorder save car